# spec-driven-development

./: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: quality-checker.md  spec-designer.md  spec-reviewer.md  task-decomposer.md  task-executor.md
.claude/skills/implement-feature/: SKILL.md
.claude/skills/implement-feature/supporting-files/: integrated-decomposer.md  integrated-executor.md  integrated-reviewer.md
.claude/skills/implement-feature/templates/: tasklist.md
.claude/skills/spec-code-applier/: SKILL.md
.claude/skills/spec-code-reviewer/: SKILL.md
.claude/skills/spec-code-reviewer/templates/: evaluation-criteria.md
.claude/skills/spec-design/: SKILL.md
.claude/skills/spec-design/rules/: llm.md
.claude/skills/spec-design/templates/: design.md
.claude/skills/spec-reviewer/: SKILL.md
.claude/skills_archived/implement-feature/templates/: ct-template.md
.claude/skills_archived/spec-code-applier/: SKILL.md
.claude/skills_archived/spec-code-reviewer/: SKILL.md
.claude/skills_archived/spec-code-reviewer/templates/: code-reviewed.md
.claude/skills_archived/spec-design/: SKILL.md
.claude/skills_archived/spec-design/templates/: tasklist.md
.claude/skills_archived/spec-reviewer/: SKILL.md
.claude/skills_archived/spec-reviewer/templates/: spec-reviewed.md
.codex/: config.toml
.codex/skills/implement-feature/: SKILL.md
.codex/skills/spec-code-applier/: SKILL.md
.codex/skills/spec-code-reviewer/: SKILL.md
.codex/skills/spec-design/: SKILL.md
.codex/skills/spec-reviewer/: SKILL.md
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
docs/llm/: README.md  architecture.md  conventions.md
(+10 files in other folders)
